<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/itdescripcion"
            android:inputType="textMultiLine"
            android:minLines="10" />

    </ScrollView>


    <!-- Layout para los ImageButton -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:weightSum="4">

        <ImageButton
            android:id="@+id/btnDocumento"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_documento"
            android:scaleType="centerInside"
            android:src="@drawable/ic_documento" />

        <ImageButton
            android:id="@+id/btnImagen"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_imagen"
            android:scaleType="centerInside"
            android:src="@drawable/ic_imagen" />

        <ImageButton
            android:id="@+id/btnAudio"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_audio"
            android:scaleType="centerInside"
            android:src="@drawable/ic_audio" />

        <ImageButton
            android:id="@+id/btnVideo"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_video"
            android:scaleType="centerInside"
            android:src="@drawable/ic_video" />

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnVolver" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnGuardar" />

    </LinearLayout>

</LinearLayout>
