<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etTituloEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idTitulo" />

        <EditText
            android:id="@+id/etFechaCreacionEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/itFechaCreacion" />

        <EditText
            android:id="@+id/etFechaObjetivoEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/itFechaObjetivo" />

        <Spinner
            android:id="@+id/spProgresoEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/cbPrioritariaEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itPrioritaria" />

        <EditText
            android:id="@+id/etDescripcionEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/itdescripcion" />

        <Button
            android:id="@+id/btnGuardarEditar"
            android:text="Guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Archivos adjuntos (Click para eliminar):"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:id="@+id/contenedorAdjuntosEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>
</ScrollView>